--- a/Digit_Recognizer/digit_recogniser_with_minist.ipynb
+++ b/Digit_Recognizer/digit_recogniser_with_minist.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d4146e7a",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2584017a",
    "metadata": {},
    "outputs": [],
@@ -80,6 +80,113 @@
     "y_train = to_categorical(y_train, num_classes=10)\n",
     "y_test = to_categorical(y_test, num_classes=10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4069c697",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\USER\\anaconda3\\Lib\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\USER\\anaconda3\\Lib\\site-packages\\keras\\src\\layers\\pooling\\max_pooling2d.py:161: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Build the CNN model\n",
+    "model = Sequential([\n",
+    "    Conv2D(32, kernel_size=(3, 3), activation='relu', input_shape=(28, 28, 1)),\n",
+    "    MaxPooling2D(pool_size=(2, 2)),\n",
+    "    Conv2D(64, kernel_size=(3, 3), activation='relu'),\n",
+    "    MaxPooling2D(pool_size=(2, 2)),\n",
+    "    Flatten(),\n",
+    "    Dense(128, activation='relu'),\n",
+    "    Dropout(0.5),\n",
+    "    Dense(10, activation='softmax')\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "52c2f20e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "375/375 [==============================] - 35s 85ms/step - loss: 0.1388 - accuracy: 0.9587 - val_loss: 0.0629 - val_accuracy: 0.9805\n",
+      "Epoch 2/5\n",
+      "375/375 [==============================] - 30s 79ms/step - loss: 0.0854 - accuracy: 0.9743 - val_loss: 0.0537 - val_accuracy: 0.9842\n",
+      "Epoch 3/5\n",
+      "375/375 [==============================] - 26s 69ms/step - loss: 0.0658 - accuracy: 0.9800 - val_loss: 0.0412 - val_accuracy: 0.9887\n",
+      "Epoch 4/5\n",
+      "375/375 [==============================] - 26s 69ms/step - loss: 0.0531 - accuracy: 0.9834 - val_loss: 0.0368 - val_accuracy: 0.9902\n",
+      "Epoch 5/5\n",
+      "375/375 [==============================] - 26s 70ms/step - loss: 0.0456 - accuracy: 0.9861 - val_loss: 0.0331 - val_accuracy: 0.9908\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x217014366d0>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compile the model\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "# Train the model\n",
+    "model.fit(x_train, y_train, epochs=5, batch_size=128, validation_split=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "bccc32dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "313/313 - 3s - loss: 0.0290 - accuracy: 0.9907 - 3s/epoch - 8ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.029038628563284874, 0.9907000064849854]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.evaluate(x_test,  y_test, verbose=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6902b219",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -87,6 +194,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
