--- a/Fashion_MNIST_classifier/Fashion_mnist.ipynb
+++ b/Fashion_MNIST_classifier/Fashion_mnist.ipynb
@@ -2,14 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "484f527c",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\USER\\anaconda3\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "# Core libraries\n",
     "import numpy as np\n",
@@ -23,28 +28,208 @@
     "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout\n",
     "from tensorflow.keras.utils import to_categorical\n",
     "from tensorflow.keras.datasets import fashion_mnist\n",
-    "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping"
+    "from tensorflow.keras.callbacks import ModelCheckpoint, EarlyStopping\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "from tensorflow.keras.layers import BatchNormalization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e70ec751",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Dataset loading\n",
     "(x_train, y_train), (x_test, y_test) = fashion_mnist.load_data()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "eb49c69f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#reshaping data to include channel dimension\n",
+    "x_train = x_train.reshape((x_train.shape[0], 28, 28, 1))\n",
+    "x_test = x_test.reshape((x_test.shape[0], 28, 28, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a7f34b23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Normalizing the data\n",
+    "x_train = x_train / 255.0\n",
+    "x_test = x_test / 255.0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "774195e5",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "682c71db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Data augmentation\n",
+    "datagen = ImageDataGenerator(\n",
+    "    rotation_range=10,\n",
+    "    zoom_range=0.1,\n",
+    "    width_shift_range=0.1,\n",
+    "    height_shift_range=0.1\n",
+    ")\n",
+    "datagen.fit(x_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bc44bc26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#one-hot encoding the labels\n",
+    "y_train = to_categorical(y_train, num_classes=10)\n",
+    "y_test = to_categorical(y_test, num_classes=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0db43434",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\USER\\anaconda3\\Lib\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\USER\\anaconda3\\Lib\\site-packages\\keras\\src\\layers\\pooling\\max_pooling2d.py:161: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#build the CNN model\n",
+    "model = tf.keras.models.Sequential([\n",
+    "    Conv2D(32, (3, 3), activation='relu', input_shape=(28, 28, 1)),\n",
+    "    MaxPooling2D((2, 2)),\n",
+    "    Conv2D(64, (3, 3), activation='relu'),\n",
+    "    MaxPooling2D((2, 2)),\n",
+    "    BatchNormalization(),\n",
+    "    Flatten(),\n",
+    "    Dense(128, activation='relu'),\n",
+    "    Dropout(0.5),\n",
+    "    Dense(10, activation='softmax')\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ee045a42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\USER\\anaconda3\\Lib\\site-packages\\keras\\src\\optimizers\\__init__.py:309: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#compile the model\n",
+    "model.compile(optimizer='adam',\n",
+    "              loss='categorical_crossentropy',\n",
+    "              metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "29b3490a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "WARNING:tensorflow:From C:\\Users\\USER\\anaconda3\\Lib\\site-packages\\keras\\src\\utils\\tf_utils.py:492: The name tf.ragged.RaggedTensorValue is deprecated. Please use tf.compat.v1.ragged.RaggedTensorValue instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\USER\\anaconda3\\Lib\\site-packages\\keras\\src\\engine\\base_layer_utils.py:384: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "\n",
+      "938/938 [==============================] - 64s 64ms/step - loss: 0.6722 - accuracy: 0.7500 - val_loss: 0.4396 - val_accuracy: 0.8397\n",
+      "Epoch 2/10\n",
+      "938/938 [==============================] - 56s 60ms/step - loss: 0.5089 - accuracy: 0.8079 - val_loss: 0.3992 - val_accuracy: 0.8577\n",
+      "Epoch 3/10\n",
+      "938/938 [==============================] - 59s 63ms/step - loss: 0.4605 - accuracy: 0.8292 - val_loss: 0.3417 - val_accuracy: 0.8765\n",
+      "Epoch 4/10\n",
+      "938/938 [==============================] - 58s 62ms/step - loss: 0.4305 - accuracy: 0.8402 - val_loss: 0.4404 - val_accuracy: 0.8410\n",
+      "Epoch 5/10\n",
+      "938/938 [==============================] - 61s 65ms/step - loss: 0.4190 - accuracy: 0.8438 - val_loss: 0.3523 - val_accuracy: 0.8668\n",
+      "Epoch 6/10\n",
+      "938/938 [==============================] - 59s 63ms/step - loss: 0.3980 - accuracy: 0.8506 - val_loss: 0.3148 - val_accuracy: 0.8854\n",
+      "Epoch 7/10\n",
+      "938/938 [==============================] - 58s 62ms/step - loss: 0.3933 - accuracy: 0.8552 - val_loss: 0.3345 - val_accuracy: 0.8751\n",
+      "Epoch 8/10\n",
+      "938/938 [==============================] - 57s 61ms/step - loss: 0.3863 - accuracy: 0.8588 - val_loss: 0.3098 - val_accuracy: 0.8889\n",
+      "Epoch 9/10\n",
+      "938/938 [==============================] - 58s 62ms/step - loss: 0.3781 - accuracy: 0.8618 - val_loss: 0.3007 - val_accuracy: 0.8906\n",
+      "Epoch 10/10\n",
+      "938/938 [==============================] - 60s 64ms/step - loss: 0.3730 - accuracy: 0.8622 - val_loss: 0.3101 - val_accuracy: 0.8919\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x19d16a0d590>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#train the model\n",
+    "model.fit(datagen.flow(x_train, y_train, batch_size=64),    \n",
+    "          epochs=10, \n",
+    "          validation_data=(x_test, y_test),\n",
+    "          callbacks=[EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)])"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
