--- a/Fashion_MNIST_classifier/Fashion_mnist.ipynb
+++ b/Fashion_MNIST_classifier/Fashion_mnist.ipynb
@@ -46,6 +46,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "b1dd7f4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10,10))\n",
+    "for i in range(25):\n",
+    "    plt.subplot(5,5,i+1)\n",
+    "    plt.xticks([])\n",
+    "    plt.yticks([])\n",
+    "    plt.grid(False)\n",
+    "    plt.imshow(x_train[i], cmap=plt.cm.binary)\n",
+    "    plt.xlabel(y_train[i])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "eb49c69f",
    "metadata": {},
@@ -67,12 +85,6 @@
     "x_train = x_train / 255.0\n",
     "x_test = x_test / 255.0"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "774195e5",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -207,9 +219,96 @@
    "source": [
     "#train the model\n",
     "model.fit(datagen.flow(x_train, y_train, batch_size=64),    \n",
-    "          epochs=10, \n",
+    "          epochs=20, \n",
     "          validation_data=(x_test, y_test),\n",
     "          callbacks=[EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68d76c74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_loss, test_acc = model.evaluate(x_test, y_test, verbose=2)\n",
+    "print('\\nTest accuracy:', test_acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a85f2199",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "probability_model = tf.keras.Sequential([model, \n",
+    "                                         tf.keras.layers.Softmax()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4eda45fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = probability_model.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a10669b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_image(i, predictions_array, true_label, img):\n",
+    "  true_label, img = true_label[i], img[i]\n",
+    "  plt.grid(False)\n",
+    "  plt.xticks([])\n",
+    "  plt.yticks([])\n",
+    "\n",
+    "  plt.imshow(img, cmap=plt.cm.binary)\n",
+    "\n",
+    "  predicted_label = np.argmax(predictions_array)\n",
+    "  if predicted_label == true_label:\n",
+    "    color = 'blue'\n",
+    "  else:\n",
+    "    color = 'red'\n",
+    "\n",
+    "  plt.xlabel(\"{} {:2.0f}% ({})\".format(y_train[predicted_label],\n",
+    "                                100*np.max(predictions_array),\n",
+    "                                y_train[true_label]),\n",
+    "                                color=color)\n",
+    "\n",
+    "def plot_value_array(i, predictions_array, true_label):\n",
+    "  true_label = true_label[i]\n",
+    "  plt.grid(False)\n",
+    "  plt.xticks(range(10))\n",
+    "  plt.yticks([])\n",
+    "  thisplot = plt.bar(range(10), predictions_array, color=\"#777777\")\n",
+    "  plt.ylim([0, 1])\n",
+    "  predicted_label = np.argmax(predictions_array)\n",
+    "\n",
+    "  thisplot[predicted_label].set_color('red')\n",
+    "  thisplot[true_label].set_color('blue')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16267a04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 0\n",
+    "plt.figure(figsize=(6,3))\n",
+    "plt.subplot(1,2,1)\n",
+    "plot_image(i, predictions[i], y_test, y_test)\n",
+    "plt.subplot(1,2,2)\n",
+    "plot_value_array(i, predictions[i],  y_test)\n",
+    "plt.show()"
    ]
   }
  ],
@@ -218,18 +317,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.4"
   }
  },
  "nbformat": 4,
