--- a/CIFAR-10/cifar.ipynb
+++ b/CIFAR-10/cifar.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b91cc2b0",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
      "text": [
       "A local file was found, but it seems to be incomplete or outdated because the auto file hash does not match the original value of 6d958be074577803d12ecdefd02955f39262c83c16fe9348329d7fe0b5c001ce so we will re-download the data.\n",
       "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
-      " 20250624/170498071 [==>...........................] - ETA: 44:05"
+      "170498071/170498071 [==============================] - 161s 1us/step\n"
      ]
     }
    ],
@@ -53,17 +53,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "34acf0f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((50000, 32, 32, 3), (10000, 32, 32, 3))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "print(x_train.shape())"
+    "x_train.shape, x_test.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b533dca3",
    "metadata": {},
    "outputs": [],
@@ -74,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a8cbf0b7",
    "metadata": {},
    "outputs": [],
@@ -82,6 +93,25 @@
     "x_train = x_train / 255.0\n",
     "x_test = x_test / 255.0"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cd0a67d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train = tf.keras.utils.to_categorical(y_train, num_classes=10)\n",
+    "y_test = tf.keras.utils.to_categorical(y_test, num_classes=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "855dd760",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
