data: git commit message

--- a/CIFAR-10/cifar.ipynb
+++ b/CIFAR-10/cifar.ipynb
@@ -111,6 +111,53 @@
    "id": "855dd760",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "model = Sequential(\n",
+    "    [\n",
+    "        Conv2D(32, (3, 3), activation='relu', input_shape=(32, 32, 3)),\n",
+    "        BatchNormalization(),\n",
+    "        Conv2D(32, (3, 3), activation='relu'),\n",
+    "        MaxPooling2D((2, 2)),\n",
+    "        Dropout(0.25),\n",
+    "\n",
+    "        Conv2D(64, (3, 3), activation='relu'),\n",
+    "        BatchNormalization(),\n",
+    "        Conv2D(64, (3, 3), activation='relu'),\n",
+    "        MaxPooling2D((2, 2)),\n",
+    "        Dropout(0.25),\n",
+    "\n",
+    "        Flatten(),\n",
+    "        Dense(512, activation='relu'),\n",
+    "        BatchNormalization(),\n",
+    "        Dropout(0.5),\n",
+    "        Dense(10, activation='softmax')\n",
+    "    ]    \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "658fd4b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datagen = ImageDataGenerator(\n",
+    "    rotation_range=15,\n",
+    "    width_shift_range=0.1,\n",
+    "    height_shift_range=0.1,\n",
+    "    horizontal_flip=True,\n",
+    "    zoom_range=0.1\n",
+    ")\n",
+    "datagen.fit(x_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ba5981d",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
