--- a/CIFAR-10/cifar.ipynb
+++ b/CIFAR-10/cifar.ipynb
@@ -158,7 +158,13 @@
    "id": "1ba5981d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.compile(\n",
+    "    optimizer = Adam(),\n",
+    "    loss = 'sparse_categorical_crossentropy',\n",
+    "    metrics = ['accuracy']\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
@@ -166,18 +172,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.4"
   }
  },
  "nbformat": 4,
