--- a/CIFAR-10/cifar.ipynb
+++ b/CIFAR-10/cifar.ipynb
@@ -97,17 +97,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cd0a67d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_train = tf.keras.utils.to_categorical(y_train, num_classes=10)\n",
-    "y_test = tf.keras.utils.to_categorical(y_test, num_classes=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "855dd760",
    "metadata": {},
    "outputs": [],
@@ -163,6 +152,21 @@
     "    optimizer = Adam(),\n",
     "    loss = 'sparse_categorical_crossentropy',\n",
     "    metrics = ['accuracy']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b8aaaf8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.fit(\n",
+    "    datagen.flow(x_train, y_train, batch_size=64),\n",
+    "    epochs=50,\n",
+    "    validation_data=(x_test, y_test),\n",
+    "    callbacks=[EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True)]\n",
     ")"
    ]
   }
