adding transfer learning with data augmentation and fine-tuning

--- a/CIFAR-10/cifar.ipynb
+++ b/CIFAR-10/cifar.ipynb
@@ -106,44 +106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "855dd760",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = Sequential([\n",
-    "    Conv2D(32, (3,3), activation='relu', padding='same', input_shape=(32,32,3)),\n",
-    "    BatchNormalization(),\n",
-    "    Conv2D(32, (3,3), activation='relu', padding='same'),\n",
-    "    BatchNormalization(),\n",
-    "    MaxPooling2D(),\n",
-    "    Dropout(0.2),\n",
-    "\n",
-    "    Conv2D(64, (3,3), activation='relu', padding='same'),\n",
-    "    BatchNormalization(),\n",
-    "    Conv2D(64, (3,3), activation='relu', padding='same'),\n",
-    "    BatchNormalization(),\n",
-    "    MaxPooling2D(),\n",
-    "    Dropout(0.3),\n",
-    "\n",
-    "    Conv2D(128, (3,3), activation='relu', padding='same'),\n",
-    "    BatchNormalization(),\n",
-    "    Conv2D(128, (3,3), activation='relu', padding='same'),\n",
-    "    BatchNormalization(),\n",
-    "    MaxPooling2D(),\n",
-    "    Dropout(0.4),\n",
-    "\n",
-    "    Flatten(),\n",
-    "    Dense(256, activation='relu'),\n",
-    "    Dropout(0.5),\n",
-    "    Dense(10, activation='softmax')\n",
-    "])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "658fd4b8",
+   "execution_count": null,
+   "id": "b73b3e12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,13 +123,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
+   "id": "b4240fb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base = tf.keras.applications.EfficientNetB0(\n",
+    "    input_shape=(224,224,3),\n",
+    "    include_top=False,\n",
+    "    weights='imagenet'\n",
+    ")\n",
+    "base.trainable = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "855dd760",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model = Sequential([\n",
+    "#     Conv2D(32, (3,3), activation='relu', padding='same', input_shape=(32,32,3)),\n",
+    "#     BatchNormalization(),\n",
+    "#     Conv2D(32, (3,3), activation='relu', padding='same'),\n",
+    "#     BatchNormalization(),\n",
+    "#     MaxPooling2D(),\n",
+    "#     Dropout(0.2),\n",
+    "\n",
+    "#     Conv2D(64, (3,3), activation='relu', padding='same'),\n",
+    "#     BatchNormalization(),\n",
+    "#     Conv2D(64, (3,3), activation='relu', padding='same'),\n",
+    "#     BatchNormalization(),\n",
+    "#     MaxPooling2D(),\n",
+    "#     Dropout(0.3),\n",
+    "\n",
+    "#     Conv2D(128, (3,3), activation='relu', padding='same'),\n",
+    "#     BatchNormalization(),\n",
+    "#     Conv2D(128, (3,3), activation='relu', padding='same'),\n",
+    "#     BatchNormalization(),\n",
+    "#     MaxPooling2D(),\n",
+    "#     Dropout(0.4),\n",
+    "\n",
+    "#     Flatten(),\n",
+    "#     Dense(256, activation='relu'),\n",
+    "#     Dropout(0.5),\n",
+    "#     Dense(10, activation='softmax')\n",
+    "# ])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "658fd4b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs = tf.keras.Input(shape=(32,32,3))\n",
+    "x = datagen(inputs)\n",
+    "x = base(x, training=False)\n",
+    "x = layers.GlobalAveragePooling2D()(x)\n",
+    "x = layers.Dense(256, activation='relu')(x)\n",
+    "x = layers.Dropout(0.3)(x)\n",
+    "outputs = layers.Dense(10, activation='softmax')(x)\n",
+    "\n",
+    "model = models.Model(inputs, outputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dda5f4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr_schedule = ReduceLROnPlateau(\n",
+    "    monitor='val_accuracy',\n",
+    "    factor=0.5,\n",
+    "    patience=3,\n",
+    "    min_lr=1e-6\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1817a808",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Sequential([\n",
+    "    layers.experimental.preprocessing.Resizing(224, 224),\n",
+    "    base,\n",
+    "    layers.GlobalAveragePooling2D(),\n",
+    "    layers.Dense(256, activation='relu'),\n",
+    "    layers.Dropout(0.5),\n",
+    "    layers.Dense(10, activation='softmax')\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1ba5981d",
    "metadata": {},
    "outputs": [],
    "source": [
     "model.compile(\n",
-    "    optimizer = Adam(),\n",
+    "    optimizer = Adam(1e-3),\n",
     "    loss = 'sparse_categorical_crossentropy',\n",
     "    metrics = ['accuracy']\n",
     ")"
@@ -173,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "0b8aaaf8",
    "metadata": {},
    "outputs": [
@@ -290,10 +355,37 @@
    ],
    "source": [
     "model.fit(\n",
-    "    datagen.flow(x_train, y_train, batch_size=64),\n",
-    "    epochs=50,\n",
+    "    x_train, y_train, \n",
+    "    batch_size=64,\n",
+    "    epochs=10,\n",
     "    validation_data=(x_test, y_test),\n",
-    "    callbacks=[EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True)]\n",
+    "    callbacks=[lr_schedule, EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True)]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58891c46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base.trainable = True\n",
+    "for layer in base.layers[:-20]:\n",
+    "    layer.trainable = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8d9c215",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(\n",
+    "    optimizer = Adam(1e-5),\n",
+    "    loss = 'sparse_categorical_crossentropy',\n",
+    "    metrics = ['accuracy']\n",
     ")"
    ]
   },
