--- a/CIFAR-10/cifar.ipynb
+++ b/CIFAR-10/cifar.ipynb
@@ -360,6 +360,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "76b97486",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(history.history['loss'])\n",
+    "plt.plot(history.history['val_loss'])\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1331cb8a",
    "metadata": {},
    "outputs": [],
@@ -453,6 +465,14 @@
     "\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "162cb063",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
