--- a/CIFAR-10/cifar.ipynb
+++ b/CIFAR-10/cifar.ipynb
@@ -366,7 +366,19 @@
    "source": [
     "plt.plot(history.history['loss'])\n",
     "plt.plot(history.history['val_loss'])\n",
-    "plt.show()\n"
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5177f2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(history.history['accuracy'])\n",
+    "plt.plot(history.history['val_accuracy'])  \n",
+    "plt.show()"
    ]
   },
   {
