--- a/CIFAR-10/cifar.ipynb
+++ b/CIFAR-10/cifar.ipynb
@@ -484,7 +484,9 @@
    "id": "162cb063",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.save('Cifar_transfer_learning_model.h5')"
+   ]
   }
  ],
  "metadata": {
