--- a/CIFAR-10/cifar.ipynb
+++ b/CIFAR-10/cifar.ipynb
@@ -16,6 +16,7 @@
     }
    ],
    "source": [
+    "#import necessary libraries\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import tensorflow as tf\n",
@@ -39,6 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#load CIFAR-10 dataset\n",
     "(x_train, y_train), (x_test, y_test) = cifar10.load_data()"
    ]
   },
@@ -68,6 +70,7 @@
     }
    ],
    "source": [
+    "#visualize some samples from the dataset\n",
     "plt.figure(figsize=(10,10))\n",
     "for i in range(25):\n",
     "    plt.subplot(5,5,i+1)\n",
@@ -97,6 +100,7 @@
     }
    ],
    "source": [
+    "#check the shape of the data\n",
     "x_train.shape, x_test.shape"
    ]
   },
@@ -107,6 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#reshape the data\n",
     "x_train = x_train.reshape((x_train.shape[0], 32, 32, -1))\n",
     "x_test = x_test.reshape((x_test.shape[0], 32, 32, -1))"
    ]
@@ -118,6 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#normalize the data\n",
     "x_train = x_train / 255.0\n",
     "x_test = x_test / 255.0"
    ]
