--- a/CIFAR-10/cifar.ipynb
+++ b/CIFAR-10/cifar.ipynb
@@ -144,6 +144,7 @@
     }
    ],
    "source": [
+    "#data augmentation\n",
     "datagen = models.Sequential([\n",
     "    layers.RandomFlip(\"horizontal\"),\n",
     "    layers.RandomRotation(0.1),\n",
@@ -167,6 +168,7 @@
     }
    ],
    "source": [
+    "#load pre-trained EfficientNetB0 model\n",
     "base = tf.keras.applications.EfficientNetB0(\n",
     "    input_shape=(224,224,3),\n",
     "    include_top=False,\n",
@@ -182,6 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#build the model\n",
     "inputs = tf.keras.Input(shape=(32,32,3))\n",
     "x = datagen(inputs)\n",
     "x = base(x, training=False)\n",
@@ -200,6 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#learning rate scheduler\n",
     "lr_schedule = ReduceLROnPlateau(\n",
     "    monitor='val_accuracy',\n",
     "    factor=0.5,\n",
@@ -215,6 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#build the custom layered model\n",
     "model = Sequential([\n",
     "    layers.experimental.preprocessing.Resizing(224, 224),\n",
     "    base,\n",
@@ -232,6 +237,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#compile the model\n",
     "model.compile(\n",
     "    optimizer = Adam(1e-3),\n",
     "    loss = 'sparse_categorical_crossentropy',\n",
@@ -265,6 +271,7 @@
     }
    ],
    "source": [
+    "#train the model\n",
     "history=model.fit(\n",
     "    x_train, y_train, \n",
     "    batch_size=64,\n",
@@ -281,6 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#allowing model to be trainable\n",
     "base.trainable = True\n",
     "for layer in base.layers[:-20]:\n",
     "    layer.trainable = False"
@@ -293,6 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#re-compile the model with a lower learning rate\n",
     "model.compile(\n",
     "    optimizer = Adam(1e-5),\n",
     "    loss = 'sparse_categorical_crossentropy',\n",
@@ -307,6 +316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#train the model\n",
     "history=model.fit(\n",
     "    x_train, y_train,   \n",
     "    batch_size=64,\n",
@@ -323,6 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#evaluate the model\n",
     "test_loss, test_acc = model.evaluate(x_test, y_test, verbose=2)\n",
     "print('\\nTest accuracy:', test_acc)"
    ]
@@ -334,6 +345,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#loss plot\n",
     "plt.plot(history.history['loss'])\n",
     "plt.plot(history.history['val_loss'])\n",
     "plt.show()"
@@ -346,6 +358,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#accuracy plot\n",
     "plt.plot(history.history['accuracy'])\n",
     "plt.plot(history.history['val_accuracy'])  \n",
     "plt.show()"
@@ -358,6 +371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#probability model\n",
     "probability_model = tf.keras.Sequential([model, \n",
     "                                         tf.keras.layers.Softmax()])"
    ]
@@ -369,6 +383,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#predictions\n",
     "predictions = probability_model.predict((x_test * 255).astype(\"uint8\"))"
    ]
   },
@@ -379,6 +394,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#functions to plot images and prediction arrays\n",
     "def plot_image(i, predictions_array, true_label, img):\n",
     "    # Extract the true label (account for one-hot or integer)\n",
     "    tl = true_label[i]\n",
@@ -435,6 +451,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#prediction visualization\n",
     "i = 0   # index of the test image you want to check\n",
     "\n",
     "plt.figure(figsize=(6, 3))\n",
@@ -455,6 +472,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "model.save('Cifar_transfer_learning_model.h5')"
    ]
   }
