model update: Resize input images to 96x96 for EfficientNetB0

--- a/CIFAR-10/cifar.ipynb
+++ b/CIFAR-10/cifar.ipynb
@@ -84,36 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "34acf0f2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((50000, 32, 32, 3), (10000, 32, 32, 3))"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#check the shape of the data\n",
-    "x_train.shape, x_test.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "id": "b533dca3",
    "metadata": {},
    "outputs": [],
    "source": [
     "#reshape the data\n",
-    "x_train = x_train.reshape((x_train.shape[0], 32, 32, -1))\n",
-    "x_test = x_test.reshape((x_test.shape[0], 32, 32, -1))"
+    "x_train = tf.image.resize(x_train, [96, 96])\n",
+    "x_test = tf.image.resize(x_test, [96, 96])"
    ]
   },
   {
@@ -170,7 +148,7 @@
    "source": [
     "#load pre-trained EfficientNetB0 model\n",
     "base = tf.keras.applications.EfficientNetB0(\n",
-    "    input_shape=(224,224,3),\n",
+    "    input_shape=(96,96,3),\n",
     "    include_top=False,\n",
     "    weights='imagenet'\n",
     ")\n",
@@ -187,6 +165,7 @@
     "#build the model\n",
     "inputs = tf.keras.Input(shape=(32,32,3))\n",
     "x = datagen(inputs)\n",
+    "x = layers.Resizing(96, 96)(x)\n",
     "x = base(x, training=False)\n",
     "x = layers.GlobalAveragePooling2D()(x)\n",
     "x = layers.Dense(256, activation='relu')(x)\n",
@@ -221,7 +200,7 @@
    "source": [
     "#build the custom layered model\n",
     "model = Sequential([\n",
-    "    layers.experimental.preprocessing.Resizing(224, 224),\n",
+    "    layers.Resizing(96, 96),\n",
     "    base,\n",
     "    layers.GlobalAveragePooling2D(),\n",
     "    layers.Dense(256, activation='relu'),\n",
