model commit message

--- a/CIFAR-10/cifar.ipynb
+++ b/CIFAR-10/cifar.ipynb
@@ -201,6 +201,7 @@
     "#build the custom layered model\n",
     "model = Sequential([\n",
     "    layers.Resizing(96, 96),\n",
+    "    layers.Rescaling(1./255),\n",
     "    base,\n",
     "    layers.GlobalAveragePooling2D(),\n",
     "    layers.Dense(256, activation='relu'),\n",
