--- a/CIFAR-10/cifar.ipynb
+++ b/CIFAR-10/cifar.ipynb
@@ -89,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#reshape the data\n",
+    "#resize the data\n",
     "x_train = tf.image.resize(x_train, [96, 96])\n",
     "x_test = tf.image.resize(x_test, [96, 96])"
    ]
